--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ width: 800px;
 
 a{
 text-decoration:none;
-color: #0b5fa5;
+color: #a60400;
 }
 
 a:hover{
@@ -64,26 +64,26 @@ padding: 3em 3em 5em;
 }
 
 #menu {
-background: #006;
+background: #eee;
 float: left;
 list-style: none;
 margin: 0;
 margin-bottom: 30px;
 padding: 0;
-border-bottom: 1px #006 solid;
+border-bottom: 1px #aaa solid;
 width: 100%;
 }
 
 #menu li {
 float: left;
 font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
-border-right: 1px #006 solid;
+border-right: 1px #aaa solid;
 margin: 0;
 padding: 0;
 }
 
 #menu a {
-background: #224bbd;
+background: #444;
 color: #fff;
 display: block;
 float: left;
@@ -96,10 +96,6 @@ text-decoration: none;
 background: #ffbe00;
 color: #a60400;
 padding-bottom: 12px;
-}
-
-b.important{
-color: #a60400;
 }
 
 .box .misc{
@@ -124,7 +120,12 @@ margin-left: -15px;
 }
 
 .hot{
-color: #a60400;
+display:inline-block;
+background: #a60400;
+color: #fff;
+border-bottom: 0;
+padding-left: 10px;
+padding-right: 10px;
 }
 
 li.paper{
